[gd_scene load_steps=7 format=3 uid="uid://by3xeo1vde16j"]

[ext_resource type="Texture2D" uid="uid://dt2fj3iwttf3x" path="res://resources/graphics/player/player.png" id="1_e62uy"]
[ext_resource type="Script" path="res://scenes/player/player.gd" id="1_uwmi4"]
[ext_resource type="Texture2D" uid="uid://gukel8kasxcs" path="res://resources/graphics/decals/white.png" id="3_bkuci"]

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_m35pa"]
polygon = PackedVector2Array(-1, -59, 11, -58, 21, -61, 33, -54, 36, -46, 41, -43, 45, -39, 43, -37, 48, -32, 49, -28, 57, -28, 61, -26, 69, -18, 76, -10, 82, -10, 85, -11, 89, -10, 94, -7, 97, -4, 104, -4, 111, -2, 113, 2, 118, 3, 125, 3, 123, 8, 127, 6, 131, 8, 134, 13, 134, 22, 133, 26, 129, 33, 127, 34, 123, 32, 120, 31, 122, 35, 123, 36, 122, 37, 115, 38, 110, 38, 109, 35, 106, 38, 105, 40, 102, 43, 96, 45, 96, 49, 95, 52, 90, 54, 78, 55, 62, 53, 60, 51, 59, 48, 58, 46, 61, 43, 62, 41, 45, 42, 38, 44, 33, 47, 23, 49, 13, 55, 1, 60, -8, 61, -20, 61, -28, 58, -37, 53, -37, 47, -41, 42, -43, 37, -44, 34, -49, 30, -53, 23, -52, 19, -52, 17, -53, 15, -58, 12, -59, 4, -61, -5, -60, -11, -60, -18, -56, -24, -55, -28, -52, -32, -50, -40, -42, -45, -37, -45, -32, -46, -29, -46, -29, -52, -24, -53, -13, -56, -8, -56, -3, -58)

[sub_resource type="CircleShape2D" id="CircleShape2D_0nwn0"]
radius = 5.90391

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_cnhkj"]
particle_flag_disable_z = true
emission_shape_offset = Vector3(0, -10, 0)
emission_shape = 1
emission_sphere_radius = 20.0
direction = Vector3(0, -1.035, 0)
initial_velocity_max = 86.02
gravity = Vector3(0, 0, 0)
scale_min = 0.2
scale_max = 0.5
color = Color(0.34902, 0.772549, 0.827451, 0.14902)

[node name="Player" type="CharacterBody2D" groups=["Entities"]]
collision_mask = 31
script = ExtResource("1_uwmi4")

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
occluder = SubResource("OccluderPolygon2D_m35pa")

[node name="PlayerImage" type="Sprite2D" parent="."]
position = Vector2(37, 1)
rotation = 1.5708
texture = ExtResource("1_e62uy")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1.19209e-07, 1)
scale = Vector2(9.152, 9.751)
shape = SubResource("CircleShape2D_0nwn0")

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="GrenadeTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="LaserStartPositions" type="Node2D" parent="."]
rotation = 1.5708

[node name="Marker2D" type="Marker2D" parent="LaserStartPositions"]
position = Vector2(13, -126)

[node name="Marker2D2" type="Marker2D" parent="LaserStartPositions"]
position = Vector2(21, -129)

[node name="Marker2D3" type="Marker2D" parent="LaserStartPositions"]
position = Vector2(29, -126)

[node name="LaserParticlesEmitter" type="GPUParticles2D" parent="LaserStartPositions"]
position = Vector2(19.9995, -129)
emitting = false
amount = 200
process_material = SubResource("ParticleProcessMaterial_cnhkj")
texture = ExtResource("3_bkuci")
lifetime = 0.2
one_shot = true
explosiveness = 0.12
local_coords = true

[node name="GrenadeStartPosition" type="Node2D" parent="."]
rotation = 1.5708

[node name="Marker2D" type="Marker2D" parent="GrenadeStartPosition"]
position = Vector2(23, -129)

[connection signal="timeout" from="ShootTimer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="GrenadeTimer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="GrenadeTimer" to="." method="_on_grenade_timer_timeout"]
